FIX FUCKING SCROLLBARS FINALLY

--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ body, html {
     overflow-y: scroll !important;
 }
 
+*::-webkit-scrollbar { width: 0 !important }
 
 #traders-wrapper {
     z-index: 1;
